--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -58,7 +58,7 @@
 	<!-- END TOP TOOLBAR -->
 	
 	<!-- MIDDLE -->
-	<div flex layout-padding style="width: 1000px;">
+	<div flex layout-padding style="width: 100%; ">
 	  <md-content>
         <ng-view  id = "toastBounds">	
 		
