--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -21,8 +21,8 @@
 										
 		            <md-list-item ng-show="tile.editable">
         		      <div flex class="md-list-item-text">
-         		        <p align="center">{{tile.means.en}}</p>
-         		        <p align="center">{{tile.means.fr}}</p>					
+         		        <p ng-show="filterLanguage=='English'" align="center">{{tile.means.en}}</p>
+         		        <p ng-show="filterLanguage!='English'"align="center">{{tile.means.fr}}</p>					
         		      </div>
     		        </md-list-item>					
 
