Adding ieml in tables 	modified:   Resources/Node.js/public/js/material.js 	modified:   Resources/Node.js/public/js/partials/dictionaryEdit.html

--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -21,6 +21,7 @@
 										
 		            <md-list-item ng-show="tile.editable">
         		      <div flex class="md-list-item-text">
+					    <p align="center">{{tile.value}}</p>
          		        <p ng-show="filterLanguage=='English'" align="center">{{tile.means.en}}</p>
          		        <p ng-show="filterLanguage!='English'"align="center">{{tile.means.fr}}</p>					
         		      </div>
