--- a/Resources/Node.js/public/js/partials/editIeml.html
+++ b/Resources/Node.js/public/js/partials/editIeml.html
@@ -12,7 +12,7 @@
         <label>ieml</label>
 		<!-- can also use the following to trigger validation: ng-change="changeiemlValue()"   md-maxlength="100"-->
     <!--    <input type="text" required iemlvalid exists md-maxlength="100"  spellcheck="false" name="ieml" ng-model="iemlValue" ng-readonly="doNotValidate"/> -->
-    <input type="text" required iemlvalid exists md-maxlength="100"  spellcheck="false" name="ieml" ng-model="iemlValue" /> 
+    <input type="text" ng-readonly="{{readOnly}}" required iemlvalid exists md-maxlength="100"  spellcheck="false" name="ieml" ng-model="iemlValue" /> 
         <div ng-messages="projectForm.ieml.$error">
           <div ng-message="required">This is required.</div>
           <div ng-message="exists" class="no-animate">Value already exists in database.</div>
