Initial: Allow for annotations #57

--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -84,8 +84,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
 	<script src="../js/d3directive.js"></script>
+	<script src="../js/annotations.js"></script>
 	<!-- app -->
 	<script src="../js/material.js"></script>
+	
 
 	
 
