--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -5,7 +5,7 @@
     <h2 align="center">{{tableTitle}}</h2> 
 
     <md-tabs md-stretch-tabs="always" md-dynamic-height="" md-border-bottom="">
-<!--      <md-tab label="TABLE">
+      <md-tab label="TABLE">
         <md-content class="md-padding">
         
        
@@ -38,7 +38,7 @@
           </md-tabs>
 		</div>
 
-  -->
+  
 		
 		<div ng-show="!showTables">
 		<h2>{{tableError}}</h2>
@@ -58,7 +58,7 @@
     <md-tab label="GRAPH">
       <md-content class="md-padding">
 
-<!--    <div d3ieml style="width=100%; height=100%"> </div> -->
+     <div d3ieml style="width=100%; height=100%"> </div>
        
       </md-content>
     </md-tab>
