--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -81,6 +81,8 @@
 	<!-- angular messages-->
 	<script src="../libs/angular-messages/angular-messages.js"></script>
 
+	<script src="../libs/angular-sanitize/angular-sanitize.js"></script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
 	<script src="../js/d3directive.js"></script>
