Alphabetical ordering 	modified:   Resources/Node.js/public/js/material.js 	modified:   Resources/Node.js/public/js/partials/loadTerms.html

--- a/Resources/Node.js/public/js/partials/loadTerms.html
+++ b/Resources/Node.js/public/js/partials/loadTerms.html
@@ -30,13 +30,13 @@
 		</md-select>
 	</md-input-container>
 	<md-input-container>
-	<label>Display</label>
+	<label>Language</label>
 		<md-select ng-model="filterLanguage" ng-change="triggerFiltering('LANGUAGE')">
 		  <md-option ng-repeat="filterLanguage in filterLanguageChoices" value="{{filterLanguage}}">{{filterLanguage}}</md-option>
 		</md-select>
 	</md-input-container>
 	<md-input-container>
-	  <label>Display</label>
+	  <label>Order</label>
 		<md-select ng-model="filterOrder" ng-change="triggerFiltering('ORDER')">
 		  <md-option ng-repeat="filterOrder in filterOrderChoices" value="{{filterOrder}}">{{filterOrder}}</md-option>
 		</md-select>
