--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -8,8 +8,8 @@
       <md-tab label="DEFINITIONS">
 
           <md-content class="md-padding">
-          <label>
-            <input style="font:small" type="checkbox" ng-model="showHidden">Show hidden
+          <label  style="font-style:italic;font-weight:lighter">
+            <input type="checkbox" ng-model="showHidden">Show hidden
          </label>
             <div ng-repeat="def in definitions"> 
               <li> {{def.reltype}}</li>
