relationships full func first cut

--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -15,7 +15,12 @@
               <li> {{def.reltype}}</li>
               <div  layout="row">
               <div ng-repeat="lnk in def.rellist">
-              <a style="border: none;" href="#/dicEdit/IEML/{{lnk.ieml}}" target="_self" ng-show="lnk.visible||showHidden"  ng-class="{disabled:!lnk.exists, buttonflat:lnk.exists, buttonflatdis:!lnk.exists}"   class="btn">{{lnk.ieml}}</a>
+              <div layout="row" ng-show="lnk.visible||showHidden">
+                <a style="border: none;" href="#/dicEdit/IEML/{{lnk.ieml}}" target="_self" ng-show="lnk.visible||showHidden"  ng-class="{disabled:!lnk.exists, buttonflat:lnk.exists, buttonflatdis:!lnk.exists}"   class="btn">{{lnk.ieml}}</a>
+                <md-switch ng-show"!lnk.visible||showHidden" ng-change="toggleRelVis(lnk._id)" ng-disabled="false" aria-label="Hide" ng-model="lnk.visible" class="md-block">
+                  
+                </md-switch>
+              </div>
               </div>
               </div>
             </div>
