fix for back button behavior

--- a/Resources/Node.js/public/js/partials/editIeml.html
+++ b/Resources/Node.js/public/js/partials/editIeml.html
@@ -49,6 +49,7 @@
       </div>	  
     </form>
 	<md-button class="md-raised" ng-click="submitEdit()" ng-disabled="projectForm.$invalid"> Submit </md-button>	
-	<md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
+	<md-button class="md-raised" ng-click="cancelEdit()"> TO LIST </md-button>
+  <md-button class="md-raised" ng-click="prevHistory()"> BACK </md-button>
   </md-content>
 </div>
