Search is not case sensitive #65

--- a/Resources/Node.js/public/js/partials/loadTerms.html
+++ b/Resources/Node.js/public/js/partials/loadTerms.html
@@ -52,7 +52,8 @@
 	  <md-virtual-repeat-container id="vertical-container">
 
 	  <md-list class="fixedRows">
-	    <md-list-item md-virtual-repeat="item in List | filter: filterText | 
+	    <md-list-item md-virtual-repeat="item in List | filter: filterText |
+	    												filter:filterItemIeml(filterText) |
                                                         filter:filterItemParadigm(filterParadigm) | 
                                                         filter:filterGrammaticalClass(filterClass) | 
                                                         filter:filterItemLayer(filterLayer)" class="repeated-item" flex> 
