--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -15,29 +15,28 @@
          
 
             <div ng-repeat="def in definitions"> 
-              <div layout="col" ><li  style = "width:15%;padding-top: 2px;"> {{def.reltype}}</li>   <md-switch  style = "margin: 0px 0px 0px 10px;" ng-change="toggleRelVis(def.reltype)" ng-disabled="false" aria-label="Hide" ng-model="def.visible" class="md-block/">  </div>
-              <div  layout="column" layout-align="left">
-              <div ng-repeat="lnk in def.rellist">
-              <div layout="column"  ng-show="lnk.visible||showHidden">
-                              
-                     
-                   <table>
-                       <tr>
-                            <td style="width:400px;"> <a style="border: none;" align="left" href="#/dicEdit/IEML/{{lnk.ieml}}" target="_self" ng-show="lnk.visible||showHidden"  ng-class="{disabled:!lnk.exists, buttonflat:lnk.exists, buttonflatdis:!lnk.exists}"   class="btn">{{lnk.ieml}}</a>
-                            </td>
-                            
-                               <td>
-                                <table>
-                                  <tr> <p  align="left">{{lookupLabels("smth").EN}}</p></tr>
-                                  <tr> <p  align="left">{{lookupLabels("smth").FR}}</p></tr>
-                                </table>
-                               </td>
-                              
-                       </tr>
-                  </table>
-              </div>
-              </div>
-              </div>
+               <div layout="col" ><li  style = "width:15%;padding-top: 2px;"> {{def.reltype}}</li>   <md-switch  style = "margin: 0px 0px 0px 10px;" ng-change="toggleRelVis(def.reltype)" ng-disabled="false" aria-label="Hide" ng-model="def.visible" class="md-block/">  </div>
+            <!--  <div  layout="column" layout-align="left"> -->
+                    <div ng-repeat="lnk in def.rellist">
+                        <div layout="column"  ng-show="lnk.visible||showHidden">
+                                        
+                               
+                             <table>
+                                 <tr>
+                                      <td style="width:400px;"> <a style="border: none;" align="left" href="#/dicEdit/IEML/{{lnk.ieml}}" target="_self" ng-show="lnk.visible||showHidden"  ng-class="{disabled:!lnk.exists, buttonflat:lnk.exists, buttonflatdis:!lnk.exists}"   class="btn">{{lnk.ieml}}</a>
+                                      </td>
+                                      
+                                         <td>
+                                          <table>
+                                            <tr> <p  align="left">{{lookupLabels("smth").EN}}</p></tr>
+                                            <tr> <p  align="left">{{lookupLabels("smth").FR}}</p></tr>
+                                          </table>
+                                         </td>
+                                        
+                                 </tr>
+                            </table>
+                          </div>
+                   </div>
             </div>
      
           </md-content>
