Definition page displays EN/FR for relations, fixing the way 'exists' is computed for relations

--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -28,8 +28,8 @@
                             
                                <td>
                                 <table>
-                                  <tr> <p  align="left">{{lookupLabels("smth").EN}}</p></tr>
-                                  <tr> <p  align="left">{{lookupLabels("smth").FR}}</p></tr>
+                                  <tr> <p  align="left">{{lookupLabels(lnk.ieml).DISP}}</p></tr>
+                                  <!--tr> <p  align="left">{{lookupLabels(lnk.ieml).FR}}</p></tr-->
                                 </table>
                                </td>
                               
